# amra

./: .gitignore  PLAN.md  README.md  apply_obfuscation.py  heretic_smoke.csv  obfuscation_config.py  obfuscation_utils.py  pyproject.toml  requirements.txt  run_obfuscation_pipeline.py
attacks/: evaluate_abliteration.py  evaluate_adaptive_attack.py  evaluate_autodan.py  evaluate_gcg.py  evaluate_heretic_attack.py  evaluate_jailbroken.py  evaluate_leace_attack.py  evaluate_nonlinear_probe.py  evaluate_pair.py  evaluate_renellm.py  evaluate_softopt.py
benchmarks/: evaluate_alpacaeval.py  evaluate_lm_harness.py  evaluate_tpu_native.py  evaluate_xstest.py
docs/: experiments.md  results_inventory.md  sweep_plan.md
evaluations/: evaluate_harmbench.py  evaluate_integrity.py  evaluate_llamaguard.py
notebooks/: smoke_test_colab.ipynb
paper/: README.md
paper/figures/: README.md
results/: all_results.csv  all_results_early_sweep.csv  reader_nullspace_overlap.csv
results/attack_utility/: llama_20250426.csv
results/smoke/: smoke_20260425_092706.csv  smoke_20260425_094435.csv
results/sweep/: sweep_gemma-2-9b-it.csv  sweep_layers_besteps_gemma-2-9b-it.csv  sweep_layers_besteps_qwen3-8b.csv  sweep_layers_besteps_results.csv  sweep_llama_layers.csv  sweep_meta-llama-3-8b-instruct.csv  sweep_qwen3-8b.csv  sweep_results.csv  utility_meta-llama-3-8b-instruct.csv
scripts/: README.md  quick_attack_test.py  run_final_eval.sh  run_sweep.sh  run_utility_benchmarks.py  run_utility_benchmarks.sh  setup_h100.sh  smoke_run.sh  sweep_epsilon.py  sweep_layers.py  sweep_layers_best_eps.py
scripts/analysis/: drift_combined_hq.py  drift_group_with_readers.py  make_matrix_tables.py  make_tables.py  plot_drift_combined.py  plot_drift_epsilon_sweep.py  plot_writer_only_drift.py  reader_nullspace_overlap.py  reader_singular_values.py  writer_singular_values.py
scripts/eval/: quick_attack_test.py  run_defense_utility.py  run_final_eval.sh  run_llama_attack_only.sh  smoke_run.sh  (+8 more)
(+18 files in other folders)
