[project]
name = "aprs"
version = "0.1.0"
description = "APRS research scripts and evaluation pipeline"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Core ML
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.56.0,<4.57.0",
    "accelerate>=1.13.0,<1.14.0",
    "datasets>=4.5.0,<4.6.0",
    "peft>=0.17.0,<0.18.0",
    "safetensors>=0.6.0,<0.7.0",
    "sentencepiece>=0.2.0,<0.3.0",
    "protobuf>=5.29.0,<7.0.0",
    "tokenizers>=0.22.0,<0.23.0",
    "huggingface-hub>=0.34.0,<0.37.0",

    # Numerics
    "numpy>=2.2.0,<2.4.0",
    "scipy>=1.15.0,<1.18.0",
    "scikit-learn>=1.7.0,<1.9.0",
    "einops>=0.8.0,<0.9.0",
    "jaxtyping>=0.3.0,<0.4.0",

    # Evaluation
    "lm-eval[hf]>=0.4.8,<0.5.0",
    "optuna>=4.2.0,<5.0.0",

    # Utilities
    "matplotlib>=3.9.0,<3.11.0",
    "tqdm>=4.67.0,<5.0.0",
    "pandas>=2.2.0,<2.4.0",
    "rouge-score>=0.1.2,<0.2.0",
    "nltk>=3.9.0,<4.0.0",
    "tabulate>=0.9.0,<0.10.0",
    "portalocker>=3.0.0,<4.0.0",
    "zstandard>=0.23.0,<1.0.0",
    "hf_transfer>=0.1.9,<1.0.0",

    # Attacks / pipeline deps
    "openai>=1.60.0,<3.0.0",
    "anthropic>=0.45.0,<1.0.0",
    "requests>=2.32.0,<3.0.0",
    "litellm>=1.60.0,<2.0.0,!=1.82.7,!=1.82.8",
    "pydantic-settings>=2.6.0,<3.0.0",
    "bitsandbytes~=0.49",
    "questionary~=2.1",
    "rich>=14.0.0,<15.0.0",
    "psutil>=7.0.0,<8.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0,<0.15.0",
]

[tool.uv]
package = false
default-groups = []

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "platform_system == 'Linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "platform_system == 'Linux'" },
]
